fixes scrollbar bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,13 @@ html {
   overflow-x: hidden;
 }
 
+/* Hide scrollbars for webkit browsers */
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
 * {
   box-sizing: border-box;
+  scrollbar-width: none; /* Hide scrollbars for Firefox */
 }
